# pylk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  GLOSSARY.md  Makefile  README.md  README.rst  development-workflow.md  pyproject.toml  run.py  setup.cfg  setup.py  workflow-plan.md
.devcontainer/: Dockerfile  devcontainer.json
prompts/: 01_planner.md  02_reviewer.md  03_commit.md  04_rag_question.md  style_constraints.md
prompts/log/: 2025-09-10-open-par-tim-amendments.md  2025-09-10-open-par-tim.md
prompts/log/amendments/: 2025-09-10-open-par-tim-amendments.md
prompts/log/historical/: implementation-plan.md  workflow-plan.md
prompts/log/successful_patterns/: headless_testing.md  signal_timing.md
prompts/roles/: code_reviewer.md  commit_writer.md  feature_implementer.md  postmortem_writer.md  prompt_engineer.md  rag_question.md
prompts/shared/: acceptance.md  rules.md
prompts/templates/: bug_fix.md  feature_kickoff.md  refactoring.md
pylk/: __init__.py  __main__.py  _version.py  app.py  main_window.py
pylk-old/scripts/: pylk.py
pylk/controllers/: __init__.py  project.py
pylk/models/: __init__.py  pulsar.py
pylk/pylk/: colormodes.py  constants.py  opensomething.py  plk.py  pulsar.py
pylk/scripts/: pylk.py
pylk/widgets/: __init__.py  plk_view.py
tests/: conftest.py  test_boot.py  test_main_window_integration.py  test_main_window_qt.py  test_plk_view_qt.py  test_pulsar_model_unit.py  test_style.py
tools/: install-pint.sh  log_prompt.sh
tools/pre-commit/: enforce-milestone-size.sh  lint-no-pint-in-widgets.sh  mypy.sh
tools/rag/: dump_for_cursor.sh
tools/repo_view/: api_outline.py  partial_snapshot.sh  snapshot.sh
